--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-    <div class="quote-container" id="quote-container">
+<body >
+    <!-- <div>
+        <p>For the uninspired....</p>
+    </div> -->
+    <div class="quote-container"  id="quote-container">
+
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
@@ -32,6 +36,9 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- script -->
     <script src="script.js"></script>
